<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Direitos autorais (c) 2019. Autor: Adiel Fontes, este aplicativo está protegido por lei 9.610/98
  -->

<!--
  ~ Direitos autorais (c) 2019. Autor: Adiel Fontes, este aplicativo está protegido por lei 9.610/98
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_fundo"
    tools:context=".Splash">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginStart="90dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logodcet"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_marginStart="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="380dp"
    android:layout_marginStart="30dp"
    android:layout_centerHorizontal="true"
    android:text="@string/SplashSubTitulo"
    android:textStyle="bold"
    android:textAlignment="center"
    android:textColor="@android:color/background_dark"
    android:textSize="30sp" />

</RelativeLayout>