<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Direitos autorais (c) 2019. Autor: Adiel Fontes, este aplicativo está protegido por lei 9.610/98
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/acesso">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EventoNome"/>

        <EditText
            android:id="@+id/TxNome"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="290dp"
    android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EventoEmail"/>

        <EditText
            android:id="@+id/TxEmail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Departamento"/>

        <EditText
            android:id="@+id/TxDepartamento"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Imei"/>

        <EditText
            android:id="@+id/TxImei"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Telefone"/>

        <EditText
            android:id="@+id/TxTelefone"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:ems="10"
            android:inputType="number"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:gravity="center"
        >

        <Button
            android:id="@+id/BtSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/salvar"
            android:onClick="BtSalvar"/>

    </LinearLayout>

</RelativeLayout>